# cudaclaw

./: .gitignore  ALIGNMENT_AND_LONGRUNNING_GUIDE.md  ALIGNMENT_FIX_REPORT.md  ALIGNMENT_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  BINARY_INTERFACE_SPECIFICATION.md  CLAUDE.md  COMPLETE_INTEGRATION_GUIDE.md  Cargo.toml  DEV_NOTES.md  GPU_DISPATCHER_GUIDE.md  GPU_DISPATCHER_SUMMARY.md  LOCK_FREE_QUEUE_SUMMARY.md  MEMORY_LAYOUT_AUDIT.md  ONBOARDING.md  PERSISTENT_KERNEL_REFACTOR_SUMMARY.md  PERSISTENT_WORKER_GUIDE.md  PERSISTENT_WORKER_SUMMARY.md  README.md  Refactoring Insights-CrdtState_memory_management_issue.md  SMARTCRDT_INTEGRATION_SUMMARY.md  UNIFIED_MEMORY_BRIDGE.md  VOLATILE_DISPATCHER_SUMMARY.md  build.rs  build_and_run.bat  compile_cuda.bat
.agents/skills/testing/: SKILL.md
kernels/: crdt_engine.cuh  crdt_functions.cuh  executor.cu  lock_free_queue.cuh  main.cu  shared_types.h  smart_crdt.cuh  smart_crdt_demo.cu  smartcrdt.cuh  test_size.cu
src/: agent.rs  alignment.rs  bridge.rs  cuda_claw.rs  dispatcher.rs  dna.rs  gpu_metrics.rs  lock_free_queue.rs  main.rs  monitor.rs  ramify_monitor.rs  runtime.rs  spreadsheet_bridge.rs  volatile_dispatcher.rs
src/constraint_theory/: dna.rs  geometric_twin.rs  mod.rs  validator.rs
src/cuda_claw/: ptx.rs
src/gpu_cell_agent/: cell_agent.rs  mod.rs  muscle_fiber.rs
src/installer/: hardware_probe.rs  llm.rs  llm_optimizer.rs  micro_simulation.rs  mod.rs  nvrtc_muscle_compiler.rs  role_profile.rs  simulated_finetuning.rs  simulation.rs
src/ml_feedback/: dna_mutator.rs  execution_log.rs  mod.rs  success_analyzer.rs
src/ramify/: mod.rs  nvrtc_compiler.rs  ptx_branching.rs  resource_exhaustion.rs  shared_memory_bridge.rs
tests/: alignment_test.rs  installer.rs  integration_test.rs  latency.rs  latency_test.rs  p99_cell_edit_test.rs
