[package]
name = "cudaclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
# CUDA Rust bindings for GPU programming
cust = "0.3"

# Async runtime for host event loop
tokio = { version = "1.42", features = ["full"] }

# Serialization for data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GPU metrics via NVML (graceful fallback when no GPU present)
nvml-wrapper = { version = "0.10", optional = true }

# Random number generation for test suite
rand = "0.8"

[features]
default = []
gpu-metrics = ["nvml-wrapper"]
