[package]
name = "cudaclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
# CUDA Rust bindings for GPU programming (optional — requires CUDA toolkit)
cust = { version = "0.3", optional = true }

# Async runtime for host event loop
tokio = { version = "1.42", features = ["full"] }

# Serialization for data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
cuda = ["cust"]
